@@ -14,6 +14,8 @@
 
 ======== Code ==========================================================
 
+(-) Finish releasing tool (freshmeat, RAA, cleanup)
+
 (-) Automatic release
 
 (-) Music
